# aequitas

./: .gitignore  AEQUITAS_CONTROL_CENTER.html  ARCHITECTURE_FONCTIONNELLE.md  BUILD_FIX.bat  BUILD_FUNCTIONAL.bat  CHARTER.md  CONTRIBUTING.md  CONTRIBUTION_REPORT.md  Cargo.toml  INSTALL.bat  INSTALL.md  INSTALL_PORTABLE.sh  LAUNCH_PORTABLE.bat  LICENSE  PROFESSIONAL_PLAN.md  PROPORTIONAL_SOLIDARITY.md  PUBLISH.bat  README.md  README_PORTABLE.md  ROADMAP.md  STABLE_COIN_FUNCTIONNEL.md  build_errors.txt  build_errors_2.txt  build_log_miner_release.txt  build_log_miner_release_2.txt  build_log_node_cors.txt  build_log_node_release.txt  build_log_release.txt  build_log_wallet.txt  build_log_wallet_2.txt  build_log_wallet_async.txt  build_log_workspace.txt  build_native.sh  dashboard.html  install_mingw.bat  miner.toml.example  simulateur_minage.py  start_dashboard.sh  start_mining.bat
.github/workflows/: build.yml
Binaries/: addr.txt  node.toml  node2.toml
docs/: COMMUNITY_POSTS.md  MARKETING_STRATEGY.md  MINING_GUIDE.md  SPECIFICATIONS.md
scripts/: build.bat  build.sh  install_rust.bat  publish_crypto_sites.sh  publish_github.bat  setup_dashboard.sh
src/consensus/: Cargo.toml
src/consensus/src/: aequihash.rs  dag.rs  gpu_config.rs  hashrate_classifier.rs  lib.rs  pow.rs
src/core/: Cargo.toml  cargo_output.txt
src/core/src/: address.rs  block.rs  blockchain.rs  difficulty.rs  lib.rs  merkle.rs  transaction.rs
src/miner/: Cargo.toml
src/miner/src/: config.rs  lib.rs  main.rs  stats.rs  stratum.rs  trust_miner.rs  worker.rs
src/network/: Cargo.toml
src/network/src/: lib.rs  messages.rs  node.rs  peer.rs
src/node/: Cargo.toml
src/node/src/: config.rs  lib.rs  main.rs  mempool.rs  rpc.rs  storage.rs
src/wallet/: Cargo.toml
src/wallet/src/: builder.rs  keystore.rs  lib.rs  main.rs  wallet.rs
