[package]
name = "aequitas-consensus"
version = "0.1.0"
edition = "2021"

[dependencies]
aequitas-core = { path = "../core" }
sha3 = "0.10"
blake3 = "1.5"
rand = "0.8"
rand_chacha = "0.3"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
num-bigint = "0.4"
num-traits = "0.2"
byteorder = "1.5"
