[package]
name = "aequitas-core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha3 = "0.10"
blake3 = "1.5"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"
bincode = "1.3"
num-bigint = "0.4"
num-traits = "0.2"
log = "0.4"
bs58 = "0.5"
