[package]
name = "aequitas-miner"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aequitas-miner"
path = "src/main.rs"

[dependencies]
aequitas-core = { path = "../core" }
aequitas-consensus = { path = "../consensus" }
tokio = { version = "1.35", features = ["full", "signal"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
thiserror = "1.0"
anyhow = "1.0"
hex = "0.4"
num_cpus = "1.16"
crossbeam-channel = "0.5"
toml = "0.8"
reqwest = { version = "0.11", features = ["json"] }
chrono = {0.4}
parking_lot = "0.12"

[target.'cfg(target_arch = "x86_64")'.dependencies]
cpufeatures = "0.2"