[package]
name = "aequitas-wallet"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "aequitas-wallet"
path = "src/main.rs"

[dependencies]
aequitas-core = { path = "../core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
hex = "0.4"
thiserror = "1.0"
anyhow = "1.0"
aes-gcm = "0.10"
argon2 = "0.5"
base64 = "0.21"
zeroize = { version = "1.7", features = ["derive"] }
bip39 = "2.0"
clap = { version = "4.4", features = ["derive"] }
chrono = "0.4"
bs58 = "0.5"
